--- a/scenes/TEMPLATES/TEMPLATE.bastra.conf
+++ b/scenes/TEMPLATES/TEMPLATE.bastra.conf
@@ -2,17 +2,19 @@
 
 <config>
   <Bastra>
-    <route_file value="../scenes/__PREFIX__/__PREFIX__.routes.xml"/>
-    <commands_file value="../scenes/__PREFIX__/__PREFIX__.commands.xml"/>
+    <route_file value="../../../scenes/__PREFIX__/__PREFIX__.routes.xml"/>
+    <commands_file value="../../../scenes/__PREFIX__/__PREFIX__.commands.xml"/>
     <verbose value="true"/>
-    <log_dir value="../data/logs/"/>
+    <log_dir value="./logs/"/>
     <log_file value="bastra.log"/>
     <log_level value="3"/>
-    <dump_dir value="../data/dumps/"/>
-    <tmp_dir value="../data/tmp/"/>
-    <results_dir value="../data/results/"/>
+    <dump_dir value="./dumps/"/>
+    <tmp_dir value="./tmp/"/>
+    <results_dir value="./results/"/>
     <new_routes_file value="new_routes.xml"/>
     <statistics_file value="statistics.csv" />
+    <edge_stats_dump value="true" />
+    <edge_stats_file value="edge_stats.csv" />
 
     <logit value="__BASTRA_LOGIT__"/>
     <use_balance value="__BASTRA_USE_BALANCE__"/>
@@ -28,8 +30,8 @@
   <Sumo>
     <port value="2081"/>
     <interactive value="false"/>
-    <sumo_config value="../scenes/__PREFIX__/__PREFIX__.sumo.conf"/>
-    <net_file value="../scenes/__PREFIX__/__PREFIX__.net.xml"/>
+    <sumo_config value="../../../scenes/__PREFIX__/__PREFIX__.sumo.conf"/>
+    <net_file value="../../../scenes/__PREFIX__/__PREFIX__.net.xml"/>
     <log_file value="sumo.log"/>
   </Sumo>
 </config>
