--- a/scenes/TEMPLATES/TEMPLATE.bastra.conf
+++ b/scenes/TEMPLATES/TEMPLATE.bastra.conf
@@ -15,6 +15,7 @@
     <statistics_file value="statistics.csv" />
     <edge_stats_dump value="true" />
     <edge_stats_file value="edge_stats.csv" />
+    <!-- <edge_stats_sampling value="10" /> -->
 
     <logit value="__BASTRA_LOGIT__"/>
     <use_balance value="__BASTRA_USE_BALANCE__"/>
