--- a/scenes/TEMPLATES/TEMPLATE.net.radial.conf
+++ b/scenes/TEMPLATES/TEMPLATE.net.radial.conf
@@ -17,7 +17,7 @@
 
     <building_defaults>
         <default.lanenumber	value="__LANES__"/>
-        <default.speed		value="__MAX_SPEED"/>
+        <default.speed		value="__MAX_SPEED__"/>
         <default.priority	value="-1"/>
     </building_defaults>
 
