--- a/tools/MAP_GENERATOR/gmp.alcalahenares.directedPenalty.1.conf
+++ b/tools/MAP_GENERATOR/gmp.alcalahenares.directedPenalty.1.conf
@@ -4,15 +4,16 @@
   <gmb>
     <mode value="penalty"/>
     <net_file value="xml_maps/alcalahenares.net.xml"/>
-    <output_prefix value="map.alcalahenares.directPenalty.1"/>
+    <output_prefix value="map.alcalahenares.alfa-5.step-7"/>
     <output_dir value="./alcalahenares.maps/"/>
-    <weight_function value="abs(1+numpy.random.uniform(0,5))"/>
+    <!-- <weight_function value="abs(1+numpy.random.uniform(0,5))"/> -->
+    <weight_function value="5"/>
     <num_maps value="1"/>
     <begin value="0"/>
     <end value="10000"/>
     <join_map value=""/>
     <join_option value="add"/>
     <pen_edges value="23867499#1"/>
-    <pen_edges_steps value="10"/>
+    <pen_edges_steps value="7"/>
   </gmb>
 </config>
